Lots of work making classes

--- a/GameObjects/GameObjects.csproj
+++ b/GameObjects/GameObjects.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GameObjects\GameObjects.csproj" />
+    <Compile Remove="GameObject.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="GameObject.cs" />
   </ItemGroup>
 
   <ItemGroup>
