--- a/Tiled Engine/Tiled Engine.csproj
+++ b/Tiled Engine/Tiled Engine.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GameObjects\GameObjects.csproj" />
+    <ProjectReference Include="..\XMLHelperMethods\XMLHelper.csproj" />
   </ItemGroup>
 
   <ItemGroup>
