Map scaling and infinate scrolling implimented.

--- a/Tiled Engine/Tiled Engine.csproj
+++ b/Tiled Engine/Tiled Engine.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GameObjects\GameObjects.csproj" />
-    <ProjectReference Include="..\XMLHelperMethods\XMLHelper.csproj" />
+    <ProjectReference Include="..\XMLHelperMethods\DkoLib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
